<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_very_tiny">

    <TextView
        android:id="@+id/tvIngredientName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_name"
        android:textAppearance="@style/TextAppearance.App.Headline6"
        android:layout_marginEnd="@dimen/margin_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvIngredientAmount" />

    <TextView
        android:id="@+id/tvIngredientAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textAppearance="@style/TextAppearance.App.Body"
        android:layout_marginEnd="@dimen/margin_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvIngredientUnit" />

    <TextView
        android:id="@+id/tvIngredientUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:textAppearance="@style/TextAppearance.App.Body"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
